<resources>
    <string name="app_name">AndroidYouTubePlayer</string>
    <string name="play_button">Play button</string>
    <string name="null_time">0:00</string>
    <string name="open_video_in_youtube">Open video in YouTube</string>
    <string name="quality_setting">Quality Setting</string>
    <string name="full_screen_button">Full screen button</string>

    <string name="removed_favorite">Removed from favorite!</string>
    <string name="added_favorite">Added to favorite!</string>
</resources>
